# lets-go-phishing

./: .gitignore  CMakeLists.txt  README.md  build.sh  enums.cpp  mail.cpp  main.cpp  player.cpp
resources/: categories.json  mails.json  maritalStatus.json  professions.json  tweets.json  victims.json
src/: enums.h  mail.cpp  mail.h  main.cpp  manager.cpp  manager.h  player.h  resources.cpp  resources.h  results.h  tweet.cpp  tweet.h  utils.h  victim.cpp  victim.h
src/ui/: board.cpp  board.h  button.cpp  button.h  mail.cpp  mail.h  profile.cpp  profile.h  tweet.cpp  tweet.h
